# InnoIgniterAI

./: .gitignore  README.md
detection_agent/: Dockerfile  pyproject.toml
detection_agent/app/: __main__.py  agent.py  agent_executor.py
detection_agent/app/tools/: detection_tool.py  email_detector.py
detection_agent/download/: 912f9baf-3e65-49c7-98f2-2e6d7bbf109d.txt  ddf4c159-1d2b-42c6-a084-b6a7af4ef6e5.txt
file_server/: Dockerfile  pyproject.toml  server.py
file_server/uploaded_files/files/: be9d8a31-35ae-4e98-94c4-604a2b6bde27.txt  fdd965fc-d087-4819-864f-23e6fdd90149.txt
host_agent/: Dockerfile  pyproject.toml
host_agent/app/: __init__.py  agent.py  auth.db  database.db  main.py
host_agent/app/config/: config.py
host_agent/app/database/: crud.py  database.py  deps.py
host_agent/app/models/: models.py
host_agent/app/routes/: routes.py
host_agent/app/utils/: utils.py
knowledge_agent/: Dockerfile  pyproject.toml
knowledge_agent/app/: __main__.py  agent.py  agent_executor.py  ingest_pdf.py  rag_db.py
knowledge_agent/app/tools/: mitre_tool.py
voice_agent/: README.md  agent.py  prompts.py  pyproject.toml  requirements.txt  tools.py
